Use Integer.valueOf() in preference to new Integer()